d-aks-defender/kubernetes_api/high-priv-api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: apiaccess
  labels:
    name: apiaccess
  namespace: defender-demo
spec:
  serviceAccountName: bigboy
  automountServiceAccountToken: true
  containers:
  - name: bigboy
    image: nginx
    command: ["/bin/bash", "-c", "while true; do curl --cacert /var/run/secrets/kubernetes.io/serviceaccount/ca.crt https://kubernetes.default/api/v1/namespaces/kube-system/pods -H \"Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)\"; sleep 60; done"]
---
apiVersion: v1
kind: Pod
metadata:
  name: deleteevents
  labels:
    name: deleteevents
  namespace: defender-demo
spec:
  serviceAccountName: bigboy
  automountServiceAccountToken: true
  containers:
  - name: bigboy
    image: nginx
    command: ["/bin/bash", "-c", "while true; do curl -X DELETE --cacert /var/run/secrets/kubernetes.io/serviceaccount/ca.crt  https://kubernetes.default/apis/events.k8s.io/v1/namespaces/defender-demo/events -H \"Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)\"; sleep 60; done"]
