d-aks-defender/kubernetes_api/mining.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mining
  labels:
    name: mining
  namespace: defender-demo
spec:
  containers:
  - name: mining
    image: miningcontainers/xmrig:latest
